# TDF-SARUS

./: .project  README.md
.github/ISSUE_TEMPLATE/: engineering-change-request.md
Model Project/: .project
Model Project/Guille/: Battery Manangment Guille.notation  Battery Manangment Guille.uml  artifacts.xml
Model Project/SARUS Project/: .project  SARUS Project.notation  SARUS Project.uml
Model Project/reqSARUS profile/: reqSARUS profile.profile.notation  reqSARUS profile.profile.uml
SARUS_Project/: SARUS_Project.rpwx  SARUS_Project.rpyx
SARUS_Project/SARUS_Project_auto_rpy/: HighLevelBehavior.sbsx  SARUS_Project.rpyx  UI_Modeling.sbsx
SARUS_Project/SARUS_Project_rpy/: AirspaceConditions.sbsx  BaseBehavior.sbsx  BaseCommunications.sbsx  Base_Modelling.sbsx  (+45 more)
TDF-C2/: CMakeLists.txt  Install_dependencies.sh  README.md  TDF-C2.creator.user.a130241  mapviz_conf.mvc  mapviz_conf_mission.mvc  mapviz_conf_test.mvc  package.xml  plugin.xml  rqt_sarus_gui.creator.user.0477905  rqt_sarus_gui.creator.user.a130241
TDF-Interface/: CMakeLists.txt  README.md  mapviz_conf.mvc  package.xml  rqt_sarus_gui.creator.user.a130241  rqt_sarus_gui.files
TDF-MissionPlanning/: README.md  install_dependencies.sh  mission_setup.sh  planner.py  pruebas_path.py
TDF-Sim/: drone_launcher.sh  drone_launcher_darknet.sh  env_launcher.sh
TDF-Vision/: Install_script.sh  README.md  launch.sh  stop.sh
TDF-Vision/detection_controller/: CMakeLists.txt  package.xml
TDF-Vision/detection_controller/launch/: detection_controller.launch
TDF-Vision/detection_controller/src/: detection_controller.cpp
TDF-Vision/src/filter_frames/: CMakeLists.txt  package.xml
TDF-Vision/src/filter_frames/launch/: filter_frames.launch
TDF-Vision/src/filter_frames/src/: filter_frames.cpp
TDF-launcher/: launch.sh  stop.sh
docs/: index.md  old.md
sarus/: drone_launcher.sh  env_launcher.sh  launcher_gazebo.sh  main_launcher.sh  project_modules.txt
(+78 files in other folders)
