<?xml version="1.0"?>
<package format="2">
  <name>filter_frames</name>
  <version>0.0.0</version>
  <description>filter_frames package</description>

  <maintainer email="rsanchezm98@gmail.com">Rodrigo Sanchez</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>darknet_ros_msgs</depend>

</package>
